data augmetation notebook downloaded from the server

--- a/data/data_processing.ipynb
+++ b/data/data_processing.ipynb
@@ -506,6 +506,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d84d75bd-8d95-4fe8-b8b1-7c3ef211c069",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "# creae test and validation set csv\n",
+    "def split_val_test_from_csvs(\n",
+    "    data_dir=\"mbti_split_data\",\n",
+    "    val_per_class=6000,\n",
+    "    test_per_class=4000,\n",
+    "    out_val_path=\"mbti_split_data/validation.csv\",\n",
+    "    out_test_path=\"mbti_split_data/test.csv\"\n",
+    "):\n",
+    "    all_val = []\n",
+    "    all_test = []\n",
+    "    \n",
+    "    # Detect CSV files in the folder\n",
+    "    for file in os.listdir(data_dir):\n",
+    "        if not file.endswith(\".csv\") or file in [\"validation.csv\", \"test.csv\"]:\n",
+    "            continue\n",
+    "        \n",
+    "        file_path = os.path.join(data_dir, file)\n",
+    "        personality_type = file.replace(\".csv\", \"\").upper()\n",
+    "        \n",
+    "        # Load CSV\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        total = len(df)\n",
+    "        \n",
+    "        if total < val_per_class + test_per_class:\n",
+    "            raise ValueError(f\"Not enough samples in {file} (has {total}, needs {val_per_class + test_per_class})\")\n",
+    "        \n",
+    "        # Shuffle\n",
+    "        df = df.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "\n",
+    "        # Split\n",
+    "        val_df = df.iloc[:val_per_class].copy()\n",
+    "        test_df = df.iloc[val_per_class:val_per_class + test_per_class].copy()\n",
+    "        train_df = df.iloc[val_per_class + test_per_class:].copy()\n",
+    "\n",
+    "        # Add label if not present\n",
+    "        if 'type' not in val_df.columns:\n",
+    "            val_df['type'] = personality_type\n",
+    "            test_df['type'] = personality_type\n",
+    "            train_df['type'] = personality_type\n",
+    "\n",
+    "        # Collect for combined files\n",
+    "        all_val.append(val_df)\n",
+    "        all_test.append(test_df)\n",
+    "\n",
+    "        # Save updated training-only .csv\n",
+    "        train_df.to_csv(file_path, index=False)\n",
+    "        print(f\"✅ Overwrote training data for {personality_type} with {len(train_df)} rows\")\n",
+    "\n",
+    "    # Save global validation and test sets\n",
+    "    pd.concat(all_val).to_csv(out_val_path, index=False)\n",
+    "    pd.concat(all_test).to_csv(out_test_path, index=False)\n",
+    "    \n",
+    "    print(f\"\\n✅ validation.csv saved with {len(pd.concat(all_val))} rows\")\n",
+    "    print(f\"✅ test.csv saved with {len(pd.concat(all_test))} rows\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35d8d215-7d8d-4de0-9fd8-d4bfdb2fa6bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_world_map = {\n",
+    "    \"ISTJ\": 7000,\n",
+    "    \"ISFJ\": 6000,\n",
+    "    \"ESTJ\": 5000,\n",
+    "    \"ESFJ\": 4000,\n",
+    "    \"ISFP\": 4500,\n",
+    "    \"ISTP\": 2500,\n",
+    "    \"ESFP\": 2000,\n",
+    "    \"ESTP\": 2000,\n",
+    "    \"INFP\": 2000,\n",
+    "    \"INFJ\": 500,\n",
+    "    \"ENFP\": 2500,\n",
+    "    \"ENFJ\": 1000,\n",
+    "    \"INTP\": 1500,\n",
+    "    \"INTJ\": 1000,\n",
+    "    \"ENTP\": 1500,\n",
+    "    \"ENTJ\": 1000\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "63eae580-ec81-46b2-8995-9bbdad44b2ab",
    "metadata": {},
@@ -530,61 +623,85 @@
    ],
    "source": [
     "import os\n",
-    "import logging\n",
-    "import typing\n",
+    "import pandas as pd\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import col\n",
-    "from random import randint\n",
     "\n",
+    "def create_federated_split(\n",
+    "    spark: SparkSession,\n",
+    "    data_dir: str = \"mbti_split_data\",\n",
+    "    num_clients: int = 8,\n",
+    "    samples_per_personality: int = 6000,\n",
+    "    real_world_map: dict = None  # Optional override, per-client values\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Creates FL client datasets in balanced or real-world mode.\n",
+    "    \n",
+    "    If real_world_map is provided, it overrides `samples_per_personality` \n",
+    "    for the personalities listed. This is PER CLIENT.\n",
+    "    \n",
+    "    All sampling is without replacement (tracked via 'used' column),\n",
+    "    and 'used' flags are reset after the split is done.\n",
     "\n",
-    "# Define paths and constants\n",
-    "PATH_TO_CSVS = \"./mbti_split_data\"\n",
-    "NUMBER_OF_PERSONALITIES = len(os.listdir(PATH_TO_CSVS))\n",
-    "NUMBER_OF_CLIENTS = 10\n",
-    "SAMPLE_SIZE_PER_PERSONALITY = 15000\n",
-    "SAMPLE_SIZE_PER_CLIENT = SAMPLE_SIZE_PER_PERSONALITY * NUMBER_OF_PERSONALITIES\n",
+    "    Returns:\n",
+    "        List of Spark DataFrames (one per client)\n",
+    "    \"\"\"\n",
     "\n",
-    "def create_samples_for_all_clients() -> list:\n",
+    "    split_type = \"real_world\" if real_world_map else \"balanced\"\n",
+    "    print(f\"\\n🔁 Starting {split_type} split for {num_clients} clients...\")\n",
     "\n",
-    "    samples = []\n",
-    "    for _ in range(NUMBER_OF_CLIENTS):\n",
-    "        samples.append(create_sample_for_one_client())\n",
+    "    client_dataframes = []\n",
+    "    personality_files = [f for f in os.listdir(data_dir) if f.endswith('.csv') and f not in ['validation.csv', 'test.csv']]\n",
     "\n",
-    "    return samples\n",
+    "    # Load all CSVs into pandas DataFrames with 'used' tracking\n",
+    "    personality_dfs = {}\n",
+    "    for file in personality_files:\n",
+    "        path = os.path.join(data_dir, file)\n",
+    "        df = pd.read_csv(path)\n",
+    "        if 'used' not in df.columns:\n",
+    "            df['used'] = False\n",
+    "        personality_dfs[file] = df\n",
     "\n",
-    "def create_sample_for_one_client():\n",
+    "    for client_idx in range(num_clients):\n",
+    "        combined_rows = []\n",
     "\n",
-    "    client_sample = None  # Initialize empty Spark DataFrame\n",
+    "        for file, df in personality_dfs.items():\n",
+    "            p_type = file.replace('.csv', '').upper()\n",
     "\n",
-    "    for personality_csv in os.listdir(PATH_TO_CSVS):\n",
-    "        file_path = os.path.join(PATH_TO_CSVS, personality_csv)\n",
+    "            # Use real_world_map if provided\n",
+    "            n_samples = real_world_map.get(p_type, samples_per_personality) if real_world_map else samples_per_personality\n",
+    "            if n_samples == 0:\n",
+    "                continue\n",
     "\n",
-    "        try:\n",
-    "            # Load CSV using Spark\n",
-    "            personality_df = spark.read.csv(file_path, header=True, inferSchema=True)\n",
-    "        except Exception as e:\n",
-    "            logger.warning(f\"File {personality_csv} caused error '{e}' when loading.\")\n",
-    "            continue\n",
-    "        \n",
-    "        # Determine if we need replacement\n",
-    "        replace = SAMPLE_SIZE_PER_PERSONALITY > personality_df.count()\n",
+    "            unused_df = df[df['used'] == False]\n",
+    "            if len(unused_df) < n_samples:\n",
+    "                raise ValueError(f\"Not enough unused rows in {p_type} for client {client_idx}. Needed {n_samples}, found {len(unused_df)}\")\n",
     "\n",
-    "        # Sample the DataFrame (Spark sampling equivalent)\n",
-    "        sampled_df = personality_df.sample(withReplacement=replace, fraction=1.0 * SAMPLE_SIZE_PER_PERSONALITY / personality_df.count())\n",
+    "            selected_rows = unused_df.sample(n=n_samples, random_state=client_idx)\n",
+    "            df.loc[selected_rows.index, 'used'] = True\n",
+    "            combined_rows.append(selected_rows)\n",
     "\n",
-    "        # Append to client_sample\n",
-    "        if client_sample is None:\n",
-    "            client_sample = sampled_df\n",
-    "        else:\n",
-    "            client_sample = client_sample.union(sampled_df)\n",
+    "        client_df = pd.concat(combined_rows).sample(frac=1, random_state=client_idx).reset_index(drop=True)\n",
+    "        spark_df = spark.createDataFrame(client_df.drop(columns=['used']))\n",
+    "        client_dataframes.append(spark_df)\n",
     "\n",
-    "    return client_sample\n",
+    "        print(f\"✅ Client {client_idx} created with {len(client_df)} rows\")\n",
     "\n",
-    "# Run and display client samples\n",
-    "samples = create_samples_for_all_clients()\n",
+    "    # Save updated CSVs with 'used' flags\n",
+    "    for file, df in personality_dfs.items():\n",
+    "        df.to_csv(os.path.join(data_dir, file), index=False)\n",
     "\n",
-    "# Show a sample from the first client dataset\n",
-    "samples[0].show(5)  # Display first 5 rows from first client's dataset\n"
+    "    print(\"Resetting 'used' flags in all personality files...\")\n",
+    "\n",
+    "    # Reset 'used' flags\n",
+    "    for file in personality_files:\n",
+    "        path = os.path.join(data_dir, file)\n",
+    "        df = pd.read_csv(path)\n",
+    "        if 'used' in df.columns:\n",
+    "            df['used'] = False\n",
+    "            df.to_csv(path, index=False)\n",
+    "\n",
+    "    print(f\"🏁 {split_type.capitalize()} split complete and CSVs reset.\\n\")\n",
+    "    return client_dataframes\n"
    ]
   },
   {
@@ -599,92 +716,55 @@
     "import torch\n",
     "from transformers import DistilBertTokenizer\n",
     "from pyspark.sql import SparkSession\n",
-    "from functools import reduce\n",
-    "from pyspark.sql import DataFrame\n",
-    "import pandas  as pd\n",
+    "import pandas as pd\n",
     "\n",
-    "# Start Spark Session\n",
     "spark = SparkSession.builder.appName(\"MBTIProcessing\").getOrCreate()\n",
     "\n",
-    "def convert_dfs_to_pth(df_list, output_dir=None, output_prefix=\"data\", test_fraction=0.1):\n",
+    "def convert_dfs_to_pth(df_list, output_dir=None, output_prefix=\"data\"):\n",
+    "    \"\"\"\n",
+    "    Converts each Spark DataFrame in df_list to a tokenized PyTorch .pth file.\n",
+    "    Removes global test set logic. All DataFrames are treated as individual clients.\n",
     "\n",
-    "    # Determine output directory\n",
+    "    Returns:\n",
+    "        Dictionary of saved file paths\n",
+    "    \"\"\"\n",
+    "\n",
     "    if output_dir is None:\n",
-    "        output_dir = os.getcwd()  # Default: same directory as notebook/script\n",
+    "        output_dir = os.getcwd()\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "    tokenizer = DistilBertTokenizer.from_pretrained(\"distilbert-base-uncased\")\n",
+    "    saved_paths = {}\n",
     "\n",
-    "    # Determine number of test datasets (ensure at least 1)\n",
-    "    num_test = max(1, int(len(df_list) * test_fraction))  \n",
-    "    test_dfs = df_list[:num_test]   # First N datasets for test\n",
-    "    train_dfs = df_list[num_test:]  # Remaining datasets for training\n",
+    "    for i, df in enumerate(df_list, start=1):\n",
+    "        train_pandas = df.toPandas()\n",
+    "        train_pandas = train_pandas.dropna(subset=[\"post\"])\n",
+    "        train_pandas[\"post\"] = train_pandas[\"post\"].astype(str)\n",
     "\n",
-    "    # ✅ Combine all test DataFrames using PySpark's `union()`\n",
-    "    if len(test_dfs) > 1:\n",
-    "        test_df = reduce(DataFrame.union, test_dfs)  # Merge multiple Spark DataFrames\n",
-    "    else:\n",
-    "        test_df = test_dfs[0]  # If only one DataFrame, use it directly\n",
-    "\n",
-    "    # Convert to Pandas for further processing\n",
-    "    test_pandas = test_df.toPandas()\n",
-    "\n",
-    "    # ✅ Drop missing values and ensure 'post' column is a string\n",
-    "    test_pandas = test_pandas.dropna(subset=[\"post\"])  # Remove NaN values\n",
-    "    test_pandas[\"post\"] = test_pandas[\"post\"].astype(str)  # Convert all values to strings\n",
-    "\n",
-    "    # ✅ Convert 'type' column to numerical labels and ensure integer dtype\n",
-    "    test_pandas[\"type_indexed\"], _ = pd.factorize(test_pandas[\"type\"])\n",
-    "    test_pandas[\"type_indexed\"] = test_pandas[\"type_indexed\"].astype(int)  # Ensure integer labels\n",
-    "\n",
-    "    # ✅ One-hot encoding (fixed)\n",
-    "    num_classes = test_pandas[\"type_indexed\"].nunique()\n",
-    "    test_pandas[\"type_encoded\"] = test_pandas[\"type_indexed\"].apply(\n",
-    "        lambda x: np.eye(num_classes, dtype=np.float32)[int(x)]\n",
-    "    )\n",
-    "\n",
-    "    # Tokenize the global test set\n",
-    "    test_encodings = tokenizer(\n",
-    "        test_pandas[\"post\"].tolist(), truncation=True, padding=True, max_length=128, return_tensors=\"pt\"\n",
-    "    )\n",
-    "    test_labels = torch.tensor(np.stack(test_pandas[\"type_encoded\"].values).astype(np.float32))\n",
-    "\n",
-    "    # Save global test dataset\n",
-    "    test_path = os.path.join(output_dir, f\"{output_prefix}_test.pth\")\n",
-    "    torch.save({\"input_ids\": test_encodings[\"input_ids\"], \"attention_mask\": test_encodings[\"attention_mask\"], \"labels\": test_labels}, test_path)\n",
-    "    print(f\"✅ Global test dataset saved as {test_path}\")\n",
-    "\n",
-    "    saved_paths = {\"test\": test_path}\n",
-    "\n",
-    "    # Process each training dataset separately\n",
-    "    for i, train_df in enumerate(train_dfs, start=1):\n",
-    "        # Convert to Pandas (only if needed for tokenization)\n",
-    "        train_pandas = train_df.toPandas()\n",
-    "\n",
-    "        # ✅ Drop missing values and ensure 'post' column is a string\n",
-    "        train_pandas = train_pandas.dropna(subset=[\"post\"])  # Remove NaN values\n",
-    "        train_pandas[\"post\"] = train_pandas[\"post\"].astype(str)  # Convert all values to strings\n",
-    "\n",
-    "        # ✅ Convert 'type' column to numerical labels and ensure integer dtype\n",
     "        train_pandas[\"type_indexed\"], _ = pd.factorize(train_pandas[\"type\"])\n",
     "        train_pandas[\"type_indexed\"] = train_pandas[\"type_indexed\"].astype(int)\n",
     "\n",
-    "        # ✅ One-hot encoding (fixed)\n",
     "        num_classes = train_pandas[\"type_indexed\"].nunique()\n",
     "        train_pandas[\"type_encoded\"] = train_pandas[\"type_indexed\"].apply(\n",
     "            lambda x: np.eye(num_classes, dtype=np.float32)[int(x)]\n",
     "        )\n",
     "\n",
-    "        # Tokenize train dataset\n",
     "        train_encodings = tokenizer(\n",
-    "            train_pandas[\"post\"].tolist(), truncation=True, padding=True, max_length=128, return_tensors=\"pt\"\n",
+    "            train_pandas[\"post\"].tolist(),\n",
+    "            truncation=True,\n",
+    "            padding=True,\n",
+    "            max_length=128,\n",
+    "            return_tensors=\"pt\"\n",
     "        )\n",
     "        train_labels = torch.tensor(np.stack(train_pandas[\"type_encoded\"].values).astype(np.float32))\n",
     "\n",
-    "        # Save train dataset\n",
     "        train_path = os.path.join(output_dir, f\"{output_prefix}{i}_train.pth\")\n",
-    "        torch.save({\"input_ids\": train_encodings[\"input_ids\"], \"attention_mask\": train_encodings[\"attention_mask\"], \"labels\": train_labels}, train_path)\n",
-    "        \n",
+    "        torch.save({\n",
+    "            \"input_ids\": train_encodings[\"input_ids\"],\n",
+    "            \"attention_mask\": train_encodings[\"attention_mask\"],\n",
+    "            \"labels\": train_labels\n",
+    "        }, train_path)\n",
+    "\n",
     "        saved_paths[f\"train_client_{i}\"] = train_path\n",
     "        print(f\"✅ Client {i} training dataset saved as {train_path}\")\n",
     "\n",
@@ -885,23 +965,62 @@
     }
    ],
    "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import nlpaug.augmenter.word as naw\n",
+    "import random\n",
     "\n",
-    "csv_file = \"estp1.csv\"\n",
-    "df_spark = spark.read.csv(csv_file, header=True, inferSchema=True)\n",
+    "def augment_texts_to_csv(\n",
+    "    df,\n",
+    "    target_count,\n",
+    "    personality_type,\n",
+    "    output_dir=\"augmented_data\",\n",
+    "    filename=None\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Augments texts for a specific personality type to reach `target_count` samples.\n",
+    "    Saves the result as a CSV file.\n",
     "\n",
-    "# Count total samples\n",
-    "total_samples = df_spark.count()\n",
-    "print(f\"Total samples in dataset: {total_samples}\")\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): Original DataFrame with at least a 'text' column.\n",
+    "        target_count (int): Total number of desired rows (original + augmented).\n",
+    "        personality_type (str): Personality label.\n",
+    "        output_dir (str): Directory to save the CSV file.\n",
+    "        filename (str): Optional custom filename (default: {personality_type}_augmented.csv).\n",
     "\n",
-    "# Define batch size (same as what you use in training)\n",
-    "batch_size = 16  # Adjust based on your training setup\n",
+    "    Returns:\n",
+    "        str: Path to the saved CSV file.\n",
+    "    \"\"\"\n",
+    "    current_count = len(df)\n",
+    "    if current_count >= target_count:\n",
+    "        result_df = df.sample(n=target_count, random_state=42).reset_index(drop=True)\n",
+    "    else:\n",
+    "        needed = target_count - current_count\n",
+    "        augmented_texts = []\n",
     "\n",
-    "# Calculate number of batches\n",
-    "num_batches = math.ceil(total_samples / batch_size)\n",
-    "print(f\"Total batches: {num_batches}\")\n",
+    "        synonym_aug = naw.SynonymAug(aug_src='wordnet')\n",
+    "        insert_aug = naw.RandomWordAug(action='insert')\n",
+    "        delete_aug = naw.RandomWordAug(action='delete')\n",
+    "        aug_methods = [synonym_aug, insert_aug, delete_aug]\n",
     "\n",
-    "# Stop Spark session\n",
-    "spark.stop()\n"
+    "        for i in range(needed):\n",
+    "            row = df.iloc[random.randint(0, current_count - 1)]\n",
+    "            aug = random.choice(aug_methods)\n",
+    "            augmented_text = aug.augment(row['text'])\n",
+    "            augmented_texts.append({'text': augmented_text, 'label': personality_type})\n",
+    "\n",
+    "        aug_df = pd.DataFrame(augmented_texts)\n",
+    "        result_df = pd.concat([df, aug_df], ignore_index=True).sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "\n",
+    "    # Save to CSV\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    if not filename:\n",
+    "        filename = f\"{personality_type.lower()}_augmented.csv\"\n",
+    "    save_path = os.path.join(output_dir, filename)\n",
+    "    result_df.to_csv(save_path, index=False)\n",
+    "\n",
+    "    print(f\"✅ Saved augmented CSV for {personality_type}: {save_path}\")\n",
+    "    return save_path\n"
    ]
   },
   {
